Version 1.1.8+SVN:
 * language and i18n:
   * updated translations: French, German, Italian, Japanese, Serbian, Spanish
   * new manual: Japanese
   * updated manual: Portuguese (Brazil)
 * campaigns
   * Heir to the Throne
     * fixed gold typo in Dwarven Doors (#6481)
     * Isle of the Damned: removed merman recall on HARD

Version 1.1.8:
 * campaigns
   * Eastern Invasion:
     * replaced unit "Lord" by "General" (#6132)
   * The South Guard :
     * fixed a few broken image paths
     * scenario 2 : 
       * made the enemy leader water-phobic, so he won't charge fishes
       * moved away a footpad so he won't steal the keep at turn #1
     * Jarek no longer acts loyally (#6408)
   * Heir to the Throne
     * fixed fire sword that can't be picked up (#6234)
     * increased income for Snow Plains enemy
     * removed obsolete maps
     * Dwarven Doors balancing tweak: AI gets more income, less gold
     * Home of the North Elves: only need to resist one turn, not all turns
   * Under the Burning Suns:
     * scenario 3: Undead leaders can't move on "very hard" difficulty
   * The Rise of Wesnoth
     * fixed several more portrait issues
     * standardized "speaker" usage in messages
     * removed recall of knights in underground scenarios
     * added hero icon to Lt Aethyr in Clearwater Port
     * fixed missing galleon images
     * fixed missing story image in Rough Landing
     * fixed missing music in the last scenario
 * graphics
   * new attack icons: Dragonstaff, Drake Flaming Claws, Faerie Fire, Human
     Fist, Scimitar, Whip
 * language and i18n:
   * updated translations: British English, Catalan, Czech, Dutch, Esperanto,
     Finnish, French, German, Hungarian, Italian, Japanese, Latin, Norwegian,
     Polish, Portuguese (Brazil), Russian, Slovak, Slovenian, Spanish, Swedish
   * updated man pages: Swedish, German
   * updated manual: Italian
 * multiplayer maps: