@@ -7,6 +7,9 @@ Version 1.1.8+SVN:
    * Heir to the Throne
      * fixed gold typo in Dwarven Doors (#6481)
      * Isle of the Damned: removed merman recall on HARD
+ * misc
+    * fixed --with-desktopdir and --with-icondir, it still needs --with-kde or
+         --with-gnome (#6499)
 
 Version 1.1.8:
  * campaigns
